# neksur

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: adr-011-gate.yml  build-matrix.yml  integration.yml  load-chaos-restore.yml  nightly-cross-engine.yml  unit.yml
cmd/license-gen/: main.go  main_test.go
cmd/migrate/: main.go
cmd/neksur-cli/: main.go  polaris_webhook_register.go  policy_compile.go  policy_compile_test.go  tenant_cert_issue.go  tenant_create.go  tenant_delete.go  tenant_migrate.go  tenant_migrate_to_pool_b.go  tenant_peer.go  tenant_smoke.go  tenant_suspend.go  tenant_windown.go
cmd/neksur-server/: import_proof_test.go  main.go  main_commercial.go  main_core.go  main_enterprise.go  regex_scanner.go
docs/: phase-0-stack.md
infra/: docker-compose.ha.yml
migrations/: atlas.hcl  check.sql
observability/: alertmanager.yml  prometheus.yml
pkg/types/: doc.go
runbooks/: clock-skew-alert.md  commit-rejected-503-rate.md  cypher-latency-breach.md  dev-cold-start.md  divergence-clear.md  dr-drill-m3-attestation.md  dr-drill.md  dremio-deploy.md  failover.md  gateway-deploy.md  glue-deploy.md  license-rotation.md  mtls-cert-rotation.md  pen-test-phase-0.5.md  phase0-deploy.md  policy-author.md  policy-compile-debug.md  pool-b-migration.md  pool-b-provisioning.md  restore-pitr.md  saas-onboarding.md  secret-rotation.md  snapshot-pin-author.md  sql-proxy-deploy.md  status-page-incident.md  sts-vending-incident.md  tenant-lifecycle.md  unity-deploy.md  vpc-peering-sandbox-attestation.md  vpc-peering.md
scripts/: .check-adr-011.pattern  check-adr-011.sh  dry-run-pool-b.sh  provision-tenant.sh  request-vpc-peering-quota-increase.sh  tenant-delete.sh  tenant-suspend.sh  tenant-windown.sh
src/: __init__.py
tests/: conftest.py
(+427 files in other folders)
