[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "neksur"
version = "0.0.0"
description = "Neksur — cross-engine Iceberg policy enforcement with metadata graph foundation."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Neksur Contributors" },
]
keywords = ["iceberg", "policy", "metadata", "graph", "age", "postgres"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = []

[project.optional-dependencies]
# Dev / CI dependencies. Lower bounds only — Wave 1 will add a uv.lock with
# exact pinned versions (see threat T-0-W0-SUPPLY in 00-01-PLAN.md).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
    "psycopg[binary]>=3.2",
]

[project.urls]
Homepage = "https://github.com/neksur-com/neksur"
Repository = "https://github.com/neksur-com/neksur"

[tool.hatch.build.targets.wheel]
# Phase 0 has no production source yet (this is scaffolding-only per 00-01-PLAN.md).
# Wave 1 (Plan 00-02) introduces `src/` and this packages will switch to that layout.
bypass-selection = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: spins up testcontainers Postgres+AGE — slow",
    "load: load-generated envelope tests (10M nodes / 50M edges) — heavy",
    "chaos: chaos-engineering tests (kill primary, network partitions)",
    "security: tenant-isolation / RLS / audit-log security assertions",
    "dr: disaster-recovery drill harness (PITR, RPO/RTO assertions)",
]
asyncio_mode = "auto"
